# SquiceLang

./: CMakeLists.txt  README.md  ast.c  ast.h  contex.c  contex.h  eval.c  eval.h  ex.c  gc.c  gc.h  hello.js  hello.wasm  index.html  javascript.js  lexer.c  lexer.h  main.c  makefile  pack.sh  parser.c  stack.h  test.lang  value.c  value.h  vector.h
examples/: calc.sqlang
examples/SDL2/: CMakeLists.txt  mainsdl.c  script.sqlang
include/: SquiceLang.h  ast.h  builtin.h  bytecode.h  codegen.h  contex.h  eval.h  ex.h  gc.h  lexer.h  parser.h  utils.h  value.h  vector.h  vm.h
src/: ast.c  builtin.c  bytecode.c  codegen.c  contex.c  eval.c  gc.c  lexer.c  main.c  parser.c  utils.c  value.c
src/vm/: builtin.c  contex.c  context.c  gc.c  interpreter.c  value.c  vm.c
tests/: test1.sqlang  test10_fstring.sqlang  test11_trycatch.sqlang  test12_calc.sqlang  test12_lexer.sqlang  test12_multiassign.sqlang  test13_scope.sqlang  test1_logic.sqlang  test2_arithmetic.sqlang  test3_ifs.sqlang  test4_loop.sqlang  test5_string.sqlang  test6_list.sqlang  test7_module.sqlang  test7_module2.sqlang  test8_gc.sqlang  test9_class.sqlang
tools/: interpreter.c  testrunner.c
